Fix label on mobile + display none on tiny screen

--- a/src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
+++ b/src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
@@ -13,6 +13,27 @@
   text-overflow: ellipsis;
   overflow: hidden;
   font-weight: 500;
+  padding: 2px 4px;
+  font-size: 0.75rem;
+  line-height: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .label.label {
+    font-size: 0.55rem;
+    padding: 1px 3px;
+    bottom: 6px;
+    left: 3px;
+    right: 2px;
+    border-radius: 3px;
+    border: 0.25px solid var(--theme-primary);
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .label.label {
+    display:none
+  }
 }
 
 .countersCover.countersCover {
